--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "js2xmlparser": "^5.0.0",
     "mongoose": "^8.0.4",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "xml2js": "^0.6.2"
   }
 }
