--- a/package.json
+++ b/package.json
@@ -22,11 +22,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "express-xml-bodyparser": "^0.3.0",
     "mongoose": "^8.0.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "xml-js": "^1.6.11",
-    "xml2js": "^0.6.2"
+    "xml-js": "^1.6.11"
   }
 }
